--- a/src/Nav.css
+++ b/src/Nav.css
@@ -6,8 +6,12 @@
   height: 30px;
   z-index: 1;
 
-  display: flex;
-  flex-direction: space-between;
+  /* animmation */
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
+}
+
+.nav_black {
   background-color: #111;
 }
 
